# docker-prefect-datasci

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  download_data.py  pyproject.toml  requirements.txt  utils.py
